[package]
name        = "travelling_salesman"
version     = "1.0.16"
authors     = ["Alfie John <alfie@alfie.wtf>"]

description   = "Travelling Salesman Problem Solvers"
documentation = "https://docs.rs/travelling_salesman"
homepage      = "https://crates.io/crates/travelling_salesman"
repository    = "https://gitlab.com/alfiedotwtf/travelling_salesman"

license = "GPL-3.0"

[dependencies]
metaheuristics = "0.0.12"
rand           = "0.3.10"
time           = "0.1.30"
