[package]
name        = "travelling_salesman"
version     = "1.1.20"
authors     = ["Alfie John <alfie@alfie.wtf>"]

description   = "Travelling Salesman Problem Solvers"
documentation = "https://docs.rs/travelling_salesman"
homepage      = "https://crates.io/crates/travelling_salesman"
repository    = "https://github.com/alfiedotwtf/travelling_salesman"

license = "GPL-3.0"

[dependencies]
metaheuristics = "1.1.20"
rand           = "^0.8.5"
time           = "^0.3.7"
